--- a/Lab1/style/style.css
+++ b/Lab1/style/style.css
@@ -33,17 +33,27 @@ h1{
 }
 
 nav{
+  width: 100%;
+  height:min-content;
+}
+.navbar{
   grid-area: nav;
   background-color: bisque;
-  margin: 0;
-  padding: 0;
   border: 1px solid;
   border-bottom: 0;
+  margin: 0;
+  padding: 5px;
+  display: flex;
+  align-content: center;
+  float: left;
+  flex-wrap: wrap;
 }
+
+
 nav ol{
-  
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 nav li{
   list-style: none;
@@ -68,17 +78,23 @@ nav li a{
 }
 main{
   grid-area: main;
-  
+  padding: 5px;
+  float: left;
 }
+
 aside{
   grid-area: aside;
+  padding: 5px;
   border: 1px solid;
   border-bottom: 0;
   border-top: 0;
   background-color: bisque;
   display: flex;
-  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
 }
+
+
 
 .text{
   border: 1px solid;
