--- a/Lab1/style/style.css
+++ b/Lab1/style/style.css
@@ -10,21 +10,39 @@ body{
                        'nav text text'
                        'nav main aside'
                        'footer footer footer';
-  grid-template-rows: 150px 46px auto 150px 0;
+  grid-template-rows: auto auto auto auto 0;
   grid-template-columns: 1fr 3fr 1fr;
   
 }
 
-header{
+.header-div{
   grid-area: header;
+  padding: 20px;
+  background-color:aqua;
+  border: 1px solid;
+  border-bottom: 0;
+  margin: 0;
+}
+header{
+  height: fit-content;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
-  background-color:aqua;
-  margin: 0;
+  
 }
+
+.right-header{
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+}
+.right-header * {
+  padding: 2px;
+}
+
+
 h1{
+  width: fit-content;
   border: 1px solid;
   padding: 5px;
   padding-right: 5%;
@@ -106,15 +124,33 @@ aside{
   background-color:aquamarine;
 }
 
-footer{
+
+.footer-div{
   grid-area: footer;
+  padding: 20px;
+  background-color:aqua;
   border: 1px solid;
+  margin: 0;
+  
+  
+}
+footer{
+  height: fit-content;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
-  background-color:aqua;
-  margin: 0;
+  
 }
+
+.left-footer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.left-footer *{
+  padding: 2px;
+}
+
 
 
