--- a/Lab2/style/style3.css
+++ b/Lab2/style/style3.css
@@ -2,49 +2,41 @@ html{
   height: 100%;
 }
 body{
-  display: grid;
   height: 100%;
   margin: 0;
   padding: 0;
-  grid-template-areas: 'header header header' 
-                       'nav text text'
-                       'nav main aside'
-                       'footer footer footer';
-  grid-template-rows: auto auto auto auto 0;
-  grid-template-columns: 1fr 3fr 1fr;
-  
 }
 
+/* ----------- HEADER ----------- */
+
 .header-div{
-  grid-area: header;
   padding: 20px;
   background-color:aqua;
   border: 1px solid;
   border-bottom: 0;
-  margin: 0;
-  
+  margin: 0; 
   
 }
 header{
-  height: fit-content;
-  width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-areas: 'left right';
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-between;
-  align-items: center;
+  width: 100%; 
+  display: table;  
 }
 
-.left-header{
-  grid-area: left;
-}
 .right-header{
-  grid-area: right;
-  text-align: right; 
+ width: fit-content ;
+ vertical-align: middle;
+ text-align: right;
+ display: table-cell;
+ height: 100%; 
+ margin: auto;
 }
-.right-header * {
-  padding: 2px;
+
+
+.left-header{
+  display: table-cell;
+  height: fit-content;  
+  vertical-align: middle;
 }
 
 
@@ -55,32 +47,40 @@ h1{
   padding-right: 5%;
   text-align: left;
   background-color: white;
+  /* float: left; */
+  
 }
 
+/* ----------- /HEADER ----------- */
 
+.content{
+  display: table;
+  height: 100%;
+  /* height: fit-content; */
+}
+.main-content{
+  display: table;
+  height: 100%;
+}
+nav{
+  width: 100%;
+  height:min-content;
+
+  
+}
 .navbar{
-  grid-area: nav;
   background-color: bisque;
   border: 1px solid;
   border-bottom: 0;
   margin: 0;
   padding: 5px;
-  display: grid;
-  grid-template-areas: 'top'
-                       'nav'
-                       'down';
-  grid-template-rows: 1fr auto 1fr;
-}
-
-.content{
-  grid-area: nav;
-}
-
-nav{
-  width: 100%;
-  height:fit-content;
+  display: table-cell ;
+  height: fit-content;  
+  vertical-align: middle;
+  width: 15%;
   
 }
+
 
 nav ol{
   margin: 0;
@@ -108,87 +108,72 @@ nav li a{
   height: 100%;
   padding: 10px;
 }
-main{
-  grid-area: main;
-  padding: 5px;
-  text-align: left;
-  display: grid;
-  grid-template-areas: '.'
-                       'content'
-                       '.';
-  grid-template-rows: 1fr auto 1fr;
-  
+
+.container{
+  display: table;
+  height: 100%;
 }
-.main-content{
-  grid-area: content;
-  text-align: left;
+
+main{
+  padding: 5px;
+  display: table-cell;  
+  height: 100%;
+  vertical-align: middle;
 }
 
 aside{
-  grid-area: aside;
+  width: 17%;
   padding: 5px;
   border: 1px solid;
   border-bottom: 0;
   border-top: 0;
   background-color: bisque;
-  display: grid;
-  grid-template-areas: '.'
-                       'content'
-                       '.';
-  grid-template-rows: 1fr auto 1fr;
-}
-.aside-content{
-  grid-area: content;
-  
-}
+  display: table-cell;
 
+  vertical-align: middle;
+  height: fit-content;
+}
 
 
 .text{
   border: 1px solid;
   border-left: 0;
-  grid-area: text;
   background-color:aquamarine;
-  display: grid;
-  grid-template-areas: '. . .'
-  '. . content'
-  '. . .';
-  grid-template-columns: 1fr 1fr 1fr;
-  align-content: center;
-}
-.text-content {
-  grid-area: content;
   text-align: right;
+  height: fit-content;
 }
 
 
 .footer-div{
-  grid-area: footer;
   padding: 20px;
   background-color:aqua;
   border: 1px solid;
-  margin: 0; 
+  margin: 0;
   
 }
 footer{
-  width: 100%;
-  min-height: 100%;
-  height: fit-content;
-  display: grid;
-  grid-template-areas: 'left right';
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  justify-items: end;
+  height: 100%;
+  width: 100%; 
+  display: table;
+  vertical-align: middle;
 }
 
+.right-footer{
+  display: table-cell;
+  height: fit-content;  
+  vertical-align: middle;
+  direction: rtl;
+}
 .left-footer{
-  grid-area: left;
-  justify-self: start;
+  width: fit-content ;
+  vertical-align: middle;
+  text-align: left;
+  display: table-cell;
+  height: 100%; 
+  margin: auto;
+
 }
 
-.right-footer {
-  grid-area: right;
-}
 
 
 
