--- a/Lab3/style/style.css
+++ b/Lab3/style/style.css
@@ -1,5 +1,6 @@
 html{
   height: 100%;
+  width: 100%;
 }
 body{
   display: grid;
@@ -12,7 +13,7 @@ body{
                        'footer footer footer';
   grid-template-rows: auto auto auto auto 0;
   grid-template-columns: 1fr 3fr 1fr;
-  
+  width: 100%;
 }
 
 .header-div{
@@ -22,23 +23,26 @@ body{
   border: 1px solid;
   border-bottom: 0;
   margin: 0;
-  display: flex;
-  align-items: center;
-}
-header{
-  height: fit-content;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  
   
 }
+header{
+  /* height: fit-content; */
+  width: 100%;
+  /* height: 100%; */
+  display: grid;
+  grid-template-areas: 'left right';
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.left-header{
+  grid-area: left;
+}
 .right-header{
-  display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap;
-  text-align: right;
+  grid-area: right;
+  /* text-align: right;  */
 }
 .right-header * {
   padding: 2px;
@@ -54,54 +58,119 @@ h1{
   background-color: white;
 }
 
-nav{
-  width: 100%;
-  height:min-content;
+.navIconOpen{
+  display: none;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
 }
-.navbar{
+.checkbox{
+  display: none;
+}
+@media only screen and (max-device-width:768px) {
+  .navIconOpen{
+    display: block;
+  }
+  .navbar{
+    width: 100%;
+  }
+  header{
+    display: flex;
+    flex-direction: column;
+    /* height: fit-content; */
+  }
+  .left-header{
+    width: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex;
+    justify-content: center;
+
+  }
+  .menu{
+    display: none;
+  }
+  ol{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    transition: max-height .5s ease-out;
+  }
+
+  li{
+    display: inline;
+    width: 100%;
+  }
+  #checkbox:checked ~ .menu{
+    display: block;
+    width: 100%;
+  }
+  #checkbox:checked~
+}
+
+
+
+
+.left-side{
   grid-area: nav;
   background-color: bisque;
   border: 1px solid;
   border-bottom: 0;
   margin: 0;
   padding: 5px;
-  display: flex;
-  align-content: center;
+  display: grid;
+  grid-template-areas: 'top'
+                       'nav'
+                       'down';
+  grid-template-rows: 1fr auto 1fr;
+}
+
+.content{
+  grid-area: nav;
+}
+
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  float: right;
+}
+
+li {
   float: left;
-  flex-wrap: wrap;
+  list-style: none
 }
 
-
-nav ol{
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-nav li{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  height: 45px;
-  background-color:darkorange;
-  transition: 100ms;
-  border-bottom: 1px solid #873600;
-}
-nav li:hover{
-  padding-left: 10px;
-  background-color:chocolate ;
-}
-
-nav li a{
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  color: bisque;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
+}
+
+
+li a:hover {
+  background-color: darkorange;
 }
 main{
   grid-area: main;
   padding: 5px;
-  float: left;
+  text-align: left;
+  display: grid;
+  grid-template-areas: '.'
+                       'content'
+                       '.';
+  grid-template-rows: 1fr auto 1fr;
+  
+}
+.main-content{
+  grid-area: content;
+  text-align: left;
 }
 
 aside{
@@ -111,9 +180,15 @@ aside{
   border-bottom: 0;
   border-top: 0;
   background-color: bisque;
-  display: flex;
-  align-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-areas: '.'
+                       'content'
+                       '.';
+  grid-template-rows: 1fr auto 1fr;
+}
+.aside-content{
+  grid-area: content;
+  
 }
 
 
@@ -121,11 +196,19 @@ aside{
 .text{
   border: 1px solid;
   border-left: 0;
-  display: flex;
-  align-items: center;
   grid-area: text;
-  justify-content: right;
   background-color:aquamarine;
+  display: grid;
+  grid-template-areas: '. . .'
+  '. . content'
+  '. . .';
+  grid-template-columns: 1fr 1fr 1fr;
+  align-content: center;
+  padding: 5px;
+}
+.text-content {
+  grid-area: content;
+  text-align: right;
 }
 
 
@@ -134,27 +217,29 @@ aside{
   padding: 20px;
   background-color:aqua;
   border: 1px solid;
-  margin: 0;
-  
+  margin: 0; 
   
 }
 footer{
+  width: 100%;
+  min-height: 100%;
   height: fit-content;
-  display: flex;
+  display: grid;
+  grid-template-areas: 'left right';
+  grid-template-columns: 1fr 1fr;
   align-items: center;
-  justify-content: space-between;
-  
+  justify-items: end;
 }
 
 .left-footer{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  grid-area: left;
+  justify-self: start;
 }
 
-.left-footer *{
-  padding: 2px;
+.right-footer {
+  grid-area: right;
 }
+
 
 
 
