--- a/Lab5/style/style.css
+++ b/Lab5/style/style.css
@@ -27,9 +27,8 @@ body{
   
 }
 header{
-  /* height: fit-content; */
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   display: grid;
   grid-template-areas: 'left right';
   grid-template-columns: 1fr 1fr;
@@ -42,10 +41,25 @@ header{
 }
 .right-header{
   grid-area: right;
-  /* text-align: right;  */
+  text-align: right; 
+}
+.right-header * {
+  display: flex;
+  justify-content: right;
 }
 .right-header * {
   padding: 2px;
+}
+
+.img5{
+  height: 100px;
+  width: 100px;
+  display: block;
+}
+
+
+.hiddenform{
+  display: none;
 }
 
 
@@ -107,7 +121,6 @@ h1{
     display: block;
     width: 100%;
   }
-  #checkbox:checked~
 }
 
 
@@ -120,11 +133,10 @@ h1{
   border-bottom: 0;
   margin: 0;
   padding: 5px;
-  display: grid;
-  grid-template-areas: 'top'
-                       'nav'
-                       'down';
-  grid-template-rows: 1fr auto 1fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .content{
@@ -161,11 +173,7 @@ main{
   grid-area: main;
   padding: 5px;
   text-align: left;
-  display: grid;
-  grid-template-areas: '.'
-                       'content'
-                       '.';
-  grid-template-rows: 1fr auto 1fr;
+  display: flex;
   
 }
 .main-content{
@@ -187,6 +195,7 @@ aside{
   grid-template-rows: 1fr auto 1fr;
 }
 .aside-content{
+  display: flex;
   grid-area: content;
   
 }
@@ -240,6 +249,8 @@ footer{
   grid-area: right;
 }
 
-
+td{
+  border: 1px solid black;
+}
 
 
